--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -6,3 +6,11 @@
 .dropdown-toggle::after {
   vertical-align: middle;
 }
+.pagination{
+  position: absolute;
+  bottom:100px;
+  right: 200px;
+}
+.navbar-dark{
+  position: relative;
+}
